Uptodate compatible with avn_ref
This patch uptodates compatible with avn_ref.
Following items are updated.
- Support Android boot image type
- Support boog logo
- Add copy of kernel, bootloader, dtb
- Split build by SoC(s5p4418/s5p6818)
- Support Wallpaper
- Add media_profiles.xml

Change-Id: Ieb31eaa1cac8e9044fca9892e38a6ede9bacc2cb
Signed-off-by: Sungwoo Park <swpark@nexell.co.kr>

--- a/ueventd.kick_st.rc
+++ b/ueventd.kick_st.rc
@@ -18,3 +18,5 @@
 /dev/sw_sync	0666	system	system
 /dev/ion		0666	system	system
 /dev/ttySAC*	0666	system	system
+/dev/video*		0666	system	system
+/dev/ttyAMA*	0666	system	system
