--- a/init.kick_st.rc
+++ b/init.kick_st.rc
@@ -18,12 +18,11 @@ import init.kick_st.usb.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
+    chmod 0755 /sys/kernel/debug
 
 on fs
-    mount_all ./fstab.kick_st
+    mount_all ./fstab.kick_st --early
     swapon_all ./fstab.kick_st
-
-    restorecon_recursive /persist
 
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
@@ -39,8 +38,14 @@ on boot
     write /proc/sys/net/core/wmem_max  8388608
 
 on post-fs
-    write /sys/block/mmcblk0/queue/rq_affinity 0
-    write /sys/block/mmcblk0/queue/scheduler noop
+    chmod 0755 /sys/kernel/debug/tracing
+
+on late-fs
+    start servicemanager
+    start surfaceflinger
+    start audioserver
+    start bootanim
+    mount_all ./fstab.avn_ref --late
 
 on post-fs-data
     setprop vold.post_fs_data_done 1
@@ -50,6 +55,10 @@ on post-fs-data
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
+
+    chmod 0666 /data/system/users/0/wallpaper_orig
+    chmod 0666 /data/system/users/0/wallpaper
+    chmod 0666 /data/system/users/0/wallpaper_info.xml
 
 service p2p_supplicant /system/bin/wpa_supplicant \
     -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
@@ -74,26 +83,6 @@ service wpa_supplicant /system/bin/wpa_supplicant \
 
 # Realtek Firmware Loader
 service rtw /system/bin/rtw_fwloader
-    class main
-    disabled
-    oneshot
-
-service dhcpcd_wlan0 /system/bin/dhcpcd -aABDKL
-    class main
-    disabled
-    oneshot
-
-service dhcpcd_p2p /system/bin/dhcpcd -aABKL
-    class main
-    disabled
-    oneshot
-
-service iprenew_wlan0 /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
-
-service iprenew_p2p /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
