init: Fix bug in init
This patch fixes up invalid ref to avn_ref.

Change-Id: Ibcab953b1a9695b0655b420614a8a495af387902
Signed-off-by: Sungwoo Park <swpark@nexell.co.kr>

--- a/init.kick_st.rc
+++ b/init.kick_st.rc
@@ -45,7 +45,7 @@ on late-fs
     start surfaceflinger
     start audioserver
     start bootanim
-    mount_all ./fstab.avn_ref --late
+    mount_all ./fstab.kick_st --late
 
 on post-fs-data
     setprop vold.post_fs_data_done 1
